# Navigation-via-Masked-Diffusion-ROS2

./: .gitattributes  README.md
cam_ws/src/: CMakeLists.txt  package.xml
cam_ws/src/camera/: cam_launch.py
cam_ws/src/camera/config/: cam0.yaml
gnm_ws/src/: README.md  cleanup.sh  run.sh  setup.sh  tune.sh
gnm_ws/src/nomad/: package.xml
gnm_ws/src/nomad/deploy/: deploy_nomad.yaml
gnm_ws/src/nomad/deploy/config/: controller.yaml  navigate.yaml
gnm_ws/src/nomad/deploy/scripts/: navigate.py  utils.py
gnm_ws/src/nomad/preprocessing/rosbags/bag1/: metadata.yaml
gnm_ws/src/nomad/preprocessing/rosbags/bag2/: metadata.yaml
gnm_ws/src/nomad/train/: train.sh
gnm_ws/src/nomad/train/config/: path.yaml
gnm_ws/src/nomad/train/vint_train.egg-info/: SOURCES.txt
